--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -7,7 +7,8 @@
                 <h1 class="mt-5">Test microservices</h1>
                 <hr>
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
-                <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>
+                <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>                
+                <a id="logBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log</a>
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
                 </div>
@@ -34,6 +35,7 @@
     <script>
     let brokerBtn = document.getElementById("brokerBtn")
     let authBrokerBtn = document.getElementById("authBrokerBtn")
+    let logBrokerBtn = document.getElementById("logBrokerBtn")
     let output = document.getElementById("output")
     let sent = document.getElementById("payload")
     let received = document.getElementById("received")
@@ -85,6 +87,39 @@
                 output.innerHTML += `<br><strong>Error:</strong> ${data.message}`;
             } else {
             output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
+            }
+        }).catch((error) => {
+            output.innerHTML += "<br><br>Error: " + error;
+        })
+    })
+
+    logBrokerBtn.addEventListener("click", function() {
+        const payload = {
+            action: "log",
+            log: {
+                name: "event",
+                data: "This is example log data"
+            }
+        }
+
+        const headers = new Headers();
+        headers.append("Content-Type", "application/json")
+
+        const body = {
+            method: "POST",
+            body: JSON.stringify(payload),
+            headers: headers
+        }
+
+        fetch("http:\/\/localhost:8080/handle", body)
+        .then((response) => response.json())
+        .then((data) => {
+            sent.innerHTML = JSON.stringify(payload, undefined, 4);
+            received.innerHTML = JSON.stringify(data, undefined, 4);
+            if (data.error) {
+                output.innerHTML += `<br><strong>Error:</strong> ${data.message}`;
+            } else {
+            output.innerHTML += `<br><strong>Response from logger service</strong>: ${data.message}`;
             }
         }).catch((error) => {
             output.innerHTML += "<br><br>Error: " + error;
